--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,6 @@
 }
 
 @theme {
-    --color-primary: #4fbf8b;
-    --color-primary-dull: #44ae7c;
+    --color-primary: #89BF33;
+    --color-primary-dull: #78b21a;
 }
